# little-rabbit

./: .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yml  how --stat 9e5aae2  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
app/: __init__.py  celery_app.py  config.py  database.py  main.py  models.py  schemas.py
app/api/: auth.py  (+1 more)
backend/: README.md  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: telegram.py
backend/app/integrations/telegram/: client.py  exceptions.py  models.py  storage.py
backend/app/schemas/: telegram.py
backend/app/telegram/: client.py
backend/backend_app/: dependencies.py  main.py
backend/backend_app/api/: telegram.py
backend/backend_app/integrations/telegram/: __init__.py  client.py
backend/backend_app/schemas/: telegram.py
backend/tests/: conftest.py  test_healthcheck.py  test_telegram_client.py
docs/: DEPLOYMENT.md  README.md  SECURITY.md  TELEGRAM.md  generate_openapi.py  openapi.json  platform-architecture-blueprint.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.cjs  vite.config.ts
infra/: README.md
k8s/: deployment.yaml  service.yaml
tests/: conftest.py  factories.py  test_auth.py  test_auth_interface.py  test_health.py  test_items.py  test_moderation.py  test_parser_framework.py  test_pipeline_integration.py  test_processing_tasks.py  test_security.py  test_workspace_dashboard.py
(+54 files in other folders)
