[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend service for the monorepo skeleton."
authors = ["Monorepo Maintainers <dev@company.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
bleach = "^6.1.0"
cachetools = "^5.3.2"
cryptography = "^41.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.1.3"
mypy = "^1.6.1"
pytest = "^7.4.2"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
